'fix menu item spacing'

--- a/website/wp-content/themes/encrage/src/style.css
+++ b/website/wp-content/themes/encrage/src/style.css
@@ -1162,15 +1162,8 @@ h3::first-letter {
 }
 
 .main-menu li {
-  padding: 0.25rem;
   font-weight: 500;
   text-transform: uppercase;
-}
-
-@media (min-width: 768px) {
-  .main-menu li {
-    padding: 0.5rem;
-  }
 }
 
 .main-menu li, .menu-item {
@@ -1249,10 +1242,6 @@ h3::first-letter {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   transition-duration: 150ms;
-}
-
-.menu-full li {
-  margin-right: 1rem;
 }
 
 .static {
